# TradingAlgo

./: .env.example  README.md  docker-compose.yml  project.sh
api-gateway/: gateway.py  pyproject.toml
auth-service/: Dockerfile  auth.py  pyproject.toml
db/: init.sql
frontend/templates/: base.html  dashboard.html  index.html  login.html  register.html
strategy-engine/: engine.py  paper_exchange.py  pyproject.toml  risk_manager.py
